--- a/contactMe.html
+++ b/contactMe.html
@@ -1,73 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <title>Contact me</title>
-    <link rel="stylesheet" href="styles/style_contactMe.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
+    />
+    <title>Contact Me | Luca Nuzzo</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./manifest.json">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fonts & Icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+
+    <!-- Stylesheets -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style_contactMe.css" />
 
     <!-- OpenGraph -->
-    <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Contact me!">
-    <meta property="og:description" content="Contact me!">
-</head>
+    <meta
+      property="og:url"
+      content="https://thebigdiamond.github.io/portfolio/contact"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Contact Me | Luca Nuzzo" />
+    <meta
+      property="og:description"
+      content="Get in touch with me for any questions or opportunities."
+    />
+  </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Contact me!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contactMe.html">CONTACT ME</a>
-                    </li>
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <i class="fas fa-code me-2"></i>Luca Nuzzo
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <i class="fas fa-user me-1"></i> About
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">
+                <i class="fas fa-laptop-code me-1"></i> Projects
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="contactMe.html">
+                <i class="fas fa-envelope me-1"></i> Contact
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <div class="mt-3">
-        <form action="https://api.web3forms.com/submit" method="POST" class="form">
+    <section class="py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h2 class="section-title text-center mb-5">Get In Touch</h2>
+            <div class="card shadow-sm">
+              <div class="card-header">
+                <i class="fas fa-paper-plane me-2"></i>Send Me a Message
+              </div>
+              <div class="card-body p-4">
+                <form id="contactForm" class="needs-validation" novalidate>
+                  <input
+                    type="hidden"
+                    name="access_key"
+                    value="9b0e5a71-134b-480f-b1fc-74435b810d3d"
+                  />
 
-            <input type="hidden" name="access_key" value="9b0e5a71-134b-480f-b1fc-74435b810d3d">
+                  <div class="mb-4">
+                    <label for="name" class="form-label"
+                      >Your Name <span class="text-danger">*</span></label
+                    >
+                    <div class="input-group">
+                      <span class="input-group-text"
+                        ><i class="fas fa-user"></i
+                      ></span>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="name"
+                        name="name"
+                        required
+                      />
+                      <div class="invalid-feedback">
+                        Please enter your name.
+                      </div>
+                    </div>
+                  </div>
 
-            <label for="name">Name:</label><br><br>
-            <input id="name" required name="name"><br><br>
-            <label for="email">Email:</label><br><br>
-            <input id="email" required name="email"><br><br>
-            <label for="message">Message:</label><br><br>
-            <textarea id="message" required name="message"></textarea><br><br>
-            <input type="submit" value="Send" onclick="sendMail()">
-        </form>
-    </div>
+                  <div class="mb-4">
+                    <label for="email" class="form-label"
+                      >Email Address <span class="text-danger">*</span></label
+                    >
+                    <div class="input-group">
+                      <span class="input-group-text"
+                        ><i class="fas fa-envelope"></i
+                      ></span>
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        required
+                      />
+                      <div class="invalid-feedback">
+                        Please enter a valid email address.
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="mb-4">
+                    <label for="subject" class="form-label">Subject</label>
+                    <div class="input-group">
+                      <span class="input-group-text"
+                        ><i class="fas fa-tag"></i
+                      ></span>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="subject"
+                        name="subject"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="mb-4">
+                    <label for="message" class="form-label"
+                      >Your Message <span class="text-danger">*</span></label
+                    >
+                    <textarea
+                      class="form-control"
+                      id="message"
+                      name="message"
+                      rows="5"
+                      required
+                    ></textarea>
+                    <div class="invalid-feedback">
+                      Please enter your message.
+                    </div>
+                  </div>
+
+                  <div class="d-grid">
+                    <button type="submit" class="btn btn-primary btn-lg">
+                      <i class="fas fa-paper-plane me-2"></i>Send Message
+                    </button>
+                  </div>
+
+                  <div id="formMessage" class="alert mt-3 d-none"></div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer py-4 bg-light">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
+            <p class="mb-0">&copy; 2025 Luca Nuzzo.</p>
+          </div>
+          <div class="col-lg-4 text-center text-lg-end">
+            <a href="#top" class="text-decoration-none text-dark">
+              <i class="fas fa-arrow-up me-1"></i> Back to Top
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#" class="back-to-top" id="backToTop">
+      <i class="fas fa-arrow-up"></i>
+    </a>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4.4.1/dist/email.min.js"></script>
+    <script src="EmailJS.js"></script>
+    <script>
+      (function () {
+        "use strict";
 
+        var form = document.getElementById("contactForm");
+
+        if (form) {
+          form.addEventListener(
+            "submit",
+            function (event) {
+              event.preventDefault();
+
+              if (!form.checkValidity()) {
+                form.classList.add("was-validated");
+                return;
+              }
+
+              const formMessage = document.getElementById("formMessage");
+
+              const submitBtn = form.querySelector('button[type="submit"]');
+              const originalText = submitBtn.innerHTML;
+              submitBtn.innerHTML =
+                '<i class="fas fa-spinner fa-spin me-2"></i>Sending...';
+              submitBtn.disabled = true;
+
+              const parms = {
+                name: document.getElementById("name").value,
+                email: document.getElementById("email").value,
+                subject: document.getElementById("subject").value,
+                message: document.getElementById("message").value,
+              };
+
+              emailjs.init("Ek6K063VFfOzWGgRH");
+
+              emailjs
+                .send("service_rz25ays", "contact_form", parms)
+                .then(function (response) {
+                  console.log("EmailJS Success:", response);
+                  formMessage.textContent =
+                    "Your message has been sent successfully! I will get back to you soon.";
+                  formMessage.classList.remove("alert-danger", "d-none");
+                  formMessage.classList.add("alert-success");
+                  form.reset();
+
+                  setTimeout(() => {
+                    formMessage.classList.add("d-none");
+                  }, 5000);
+                })
+                .catch(function (error) {
+                  console.error("EmailJS Error:", error);
+                  formMessage.textContent =
+                    "Sorry, there was an error sending your message. Please try again later.";
+                  formMessage.classList.remove("alert-success", "d-none");
+                  formMessage.classList.add("alert-danger");
+                })
+                .finally(function () {
+                  submitBtn.innerHTML = originalText;
+                  submitBtn.disabled = false;
+                });
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        }
+
+        const backToTop = document.getElementById("backToTop");
+        if (backToTop) {
+          window.addEventListener("scroll", function () {
+            if (window.pageYOffset > 300) {
+              backToTop.classList.add("show");
+            } else {
+              backToTop.classList.remove("show");
+            }
+          });
+
+          backToTop.addEventListener("click", function (e) {
+            e.preventDefault();
+            window.scrollTo({ top: 0, behavior: "smooth" });
+          });
+        }
+      })();
+    </script>
+  </body>
 </html>
