--- a/index.html
+++ b/index.html
@@ -1,113 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles/style_index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
+    />
+    <title>Luca Nuzzo | Portfolio</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="assets/favicon/android-chrome-512x512.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fonts & Icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
 
+    <!-- Stylesheets -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style_index.css" />
 
     <!-- OpenGraph -->
-    <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="My Portfolio">
-    <meta property="og:description" content="Welcome to my portfolio">
+    <meta
+      property="og:url"
+      content="https://thebigdiamond.github.io/portfolio/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Luca Nuzzo | Portfolio" />
+    <meta
+      property="og:description"
+      content="Web Developer & Designer | Check out my portfolio"
+    />
+  </head>
 
-</head>
-
-<body>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Welcome to my portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contactMe.html">CONTACT ME</a>
-                    </li>
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-code me-2"></i>Luca Nuzzo
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="index.html">
+                <i class="fas fa-user me-1"></i> About
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">
+                <i class="fas fa-laptop-code me-1"></i> Projects
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactMe.html">
+                <i class="fas fa-envelope me-1"></i> Contact
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <div class="cv text-center my-5">
-        <div>
-            <h1>WELCOME</h1>
-            <p>
-                Hello, my name is Luca Nuzzo and this is my portfolio.<br>
-                Here you will find my skills and previous work experiences, along with some small projects I made.
+    <header class="hero-section text-center py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <h1 class="display-4 fw-bold mb-4">
+              Hello, I'm <span class="text-primary">Luca Nuzzo</span>
+            </h1>
+            <p class="lead mb-4">
+              Welcome to my portfolio, where I showcase my skills and projects.
             </p>
+            <div class="d-flex justify-content-center gap-3">
+              <a href="#about" class="btn btn-primary">
+                <i class="fas fa-user me-1"></i> About Me
+              </a>
+              <a href="projects.html" class="btn btn-outline-primary">
+                <i class="fas fa-laptop-code me-1"></i> View Projects
+              </a>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </header>
 
-    <div class="index-page container">
-
-        <div class="education row my-4">
-            <div class="col-md-4">
-                <img src="assets/img/graduation_cap.png" class="grad_cap img-fluid">
+    <section id="about" class="py-5 bg-light">
+      <div class="container">
+        <h2 class="section-title">About Me</h2>
+        <div class="row align-items-center">
+          <div class="col-lg-6 mb-4 mb-lg-0">
+            <div class="card h-100">
+              <div class="card-header">
+                <i class="fas fa-graduation-cap me-2"></i>Education
+              </div>
+              <div class="card-body">
+                <h3 class="h5 mb-3">I.I.S.S "E. Mattei" - Maglie</h3>
+                <p class="text-muted">2016 - 2022</p>
+                <p>
+                  Studied Computer Science and Web Development, gaining a strong
+                  foundation in programming and web technologies.
+                </p>
+              </div>
             </div>
-            <div class="col-md-8 text-container_ed">
-                <h2>Education:</h2><br>
-                <p>I.I.S.S "E. Mattei" - Maglie</p>
-                <p>2016-2022</p>
+          </div>
+          <div class="col-lg-6">
+            <div class="card h-100">
+              <div class="card-header">
+                <i class="fas fa-briefcase me-2"></i>Work Experience
+              </div>
+              <div class="card-body">
+                <h3 class="h5 mb-3">Backend Apprenticeship</h3>
+                <p class="text-muted">
+                  Links Management And Technology SpA | July 2023 - November
+                  2023
+                </p>
+                <p>
+                  Worked on backend development, collaborating with a team to
+                  build and maintain web applications.
+                </p>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+    </section>
 
-        <div class="skills row my-4">
-            <div class="col-md-11">
-                <img src="assets/img/skills_img.png" class="skills_img img-fluid">
-            </div>
-            <div class="col-md-8 text-container_skills">
-                <h2>Skills:</h2><br>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>SASS</li>
+    <section id="skills" class="py-5">
+      <div class="container">
+        <h2 class="section-title">My Skills</h2>
+        <div class="row g-4 justify-content-center">
+          <div class="col-md-6">
+            <div class="card h-100 text-center p-4">
+              <div class="card-body d-flex flex-column align-items-center">
+                <div class="icon-wrapper mb-3">
+                  <i class="fas fa-code fa-3x text-primary"></i>
+                </div>
+                <h3 class="h5 mb-3">Frontend Development</h3>
+                <ul class="list-unstyled text-center">
+                  <li>HTML & CSS</li>
+                  <li>JavaScript</li>
+                  <li>Bootstrap</li>
+                  <li>SASS/SCSS</li>
                 </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card h-100 text-center p-4">
+              <div class="card-body d-flex flex-column align-items-center">
+                <div class="icon-wrapper mb-3">
+                  <i class="fas fa-server fa-3x text-primary"></i>
+                </div>
+                <h3 class="h5 mb-3">Backend Development</h3>
+                <ul class="list-unstyled text-center">
+                  <li>Node.js</li>
+                  <li>MySQL</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+    </section>
 
-        <div class="work_experience row my-4">
-            <div class="col-md-4">
-                <img src="assets/img/work_experience.png" class="work_experience_img img-fluid">
-            </div>
-            <div class="col-md-8 text-container_work">
-                <h2>Work experiences:</h2><br>
-                <p>Links Management And Technology SpA</p>
-                <p>Role: Backend Apprenticeship</p>
-                <p>July 2023- November 2023</p>
-            </div>
-        </div>
-    </div>
+    <section class="py-5 bg-primary text-white">
+      <div class="container text-center">
+        <h2 class="h1 mb-4">Have a project in mind?</h2>
+        <p class="lead mb-4">
+          I'm always open to discussing new opportunities and creative ideas.
+        </p>
+        <a href="contactMe.html" class="btn btn-light btn-lg">
+          <i class="fas fa-paper-plane me-2"></i>Get In Touch
+        </a>
+      </div>
+    </section>
+
+    <footer class="footer py-4">
+      <div class="container text-center">
+        <p class="mb-0">&copy; 2025 Luca Nuzzo.</p>
+      </div>
+    </footer>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
-
+    <!-- Custom JS -->
+    <script>
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute("href"));
+          if (target) {
+            target.scrollIntoView({
+              behavior: "smooth",
+              block: "start",
+            });
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
