--- a/projects.html
+++ b/projects.html
@@ -1,78 +1,336 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <title>My Projects</title>
-    <link rel="stylesheet" href="styles/style_projects.css">
-    <link type="text/css" href="styles/GreenEarth/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0"
+    />
+    <title>My Projects | Luca Nuzzo</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="./manifest.json">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="assets/favicon/android-chrome-512x512.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fonts & Icons -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
 
+    <!-- Stylesheets -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style_projects.css" />
 
     <!-- OpenGraph -->
-    <meta property="og:url" content="https://thebigdiamond.github.io/portfolio/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="My Projects">
-    <meta property="og:description" content="My Projects">
+    <meta
+      property="og:url"
+      content="https://thebigdiamond.github.io/portfolio/projects"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="My Projects | Luca Nuzzo" />
+    <meta
+      property="og:description"
+      content="Check out my latest projects and works"
+    />
+  </head>
 
-</head>
-
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Projects</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contactMe.html">CONTACT ME</a>
-                    </li>
-                </ul>
-            </div>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <i class="fas fa-code me-2"></i>Luca Nuzzo
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <i class="fas fa-user me-1"></i> About
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="projects.html">
+                <i class="fas fa-laptop-code me-1"></i> Projects
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactMe.html">
+                <i class="fas fa-envelope me-1"></i> Contact
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
-    <h1 class="project_title">Javascript Calculator:</h1>
+    <section class="py-5">
+      <div class="container">
+        <h2 class="section-title text-center mb-5">My Projects</h2>
 
-    <div class="container">
-        <iframe class="responsive-iframe" title="javascript calculator" src="assets/pages/calculator/index.html">
-            <p>iframes are not supported by this browser.</p>
-        </iframe>
-    </div>
+        <!-- Project 1 -->
+        <article class="project-card mb-5">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="project-preview">
+                <iframe
+                  class="responsive-iframe"
+                  title="JavaScript Calculator"
+                  src="assets/pages/calculator/index.html"
+                >
+                  <p>
+                    Your browser does not support iframes. Please try viewing
+                    this in a modern browser.
+                  </p>
+                </iframe>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="project-info p-4">
+                <h3 class="project-header mb-3">
+                  <i class="fas fa-calculator me-2"></i>JavaScript Calculator
+                </h3>
+                <p class="mb-3">
+                  A responsive calculator built with vanilla JavaScript.
+                  Supports all basic arithmetic operations and features a clean,
+                  user-friendly interface.
+                </p>
+                <a
+                  href="assets/pages/calculator/index.html"
+                  class="btn btn-primary"
+                  target="_blank"
+                >
+                  <i class="fas fa-external-link-alt me-1"></i> View Project
+                </a>
+              </div>
+            </div>
+          </div>
+        </article>
 
-    <h1 class="project_title">Hacker News:</h1>
+        <!-- Project 2 -->
+        <article class="project-card mb-5">
+          <div class="row g-0">
+            <div class="col-lg-6 order-lg-2">
+              <div class="project-preview">
+                <iframe
+                  class="responsive-iframe"
+                  title="Hacker News Clone"
+                  src="https://hacker-news-s2i.netlify.app/"
+                >
+                  <p>
+                    Your browser does not support iframes. Please try viewing
+                    this in a modern browser.
+                  </p>
+                </iframe>
+              </div>
+            </div>
+            <div class="col-lg-6 order-lg-1">
+              <div class="project-info p-4">
+                <h3 class="project-header mb-3">
+                  <i class="fas fa-newspaper me-2"></i>Hacker News
+                </h3>
+                <p class="mb-3">
+                  A modern clone of Hacker News built. Fetches and displays the
+                  latest stories from the Hacker News API with a clean,
+                  responsive design.
+                </p>
+                <a
+                  href="https://hacker-news-s2i.netlify.app/"
+                  class="btn btn-primary"
+                  target="_blank"
+                >
+                  <i class="fas fa-external-link-alt me-1"></i> View Live Demo
+                </a>
+              </div>
+            </div>
+          </div>
+        </article>
 
-    <div class="container">
-        <iframe class="responsive-iframe" title="hacker news" src="https://hacker-news-s2i.netlify.app/">
-            <p>iframes are not supported by this browser.</p>
-        </iframe>
-    </div>
-    
+        <!-- Project 3 -->
+        <article class="project-card mb-5">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="project-preview">
+                <iframe
+                  class="responsive-iframe"
+                  title="Hotel Pomalia"
+                  src="https://hotel-pomalia-s2i.netlify.app/"
+                >
+                  <p>
+                    Your browser does not support iframes. Please try viewing
+                    this in a modern browser.
+                  </p>
+                </iframe>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="project-info p-4">
+                <h3 class="project-header mb-3">
+                  <i class="fas fa-newspaper me-2"></i>Fictional solar panel
+                  dashboard
+                </h3>
+                <p class="mb-3">
+                  A modern solar panel dashboard. Actual solar panel data isn't
+                  present due to an API problem.
+                </p>
+                <a
+                  href="https://hotel-pomalia-s2i.netlify.app/"
+                  class="btn btn-primary"
+                  target="_blank"
+                >
+                  <i class="fas fa-external-link-alt me-1"></i> View Live Demo
+                </a>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!-- GitHub Projects Section -->
+    <section class="py-5 bg-light">
+      <div class="container">
+        <h2 class="section-title text-center mb-5">Other Projects</h2>
+        <div class="row g-4 justify-content-center">
+          <div class="col-lg-8">
+            <!-- Project 1 -->
+            <div class="card mb-4">
+              <div class="card-body p-4">
+                <div class="d-flex align-items-start">
+                  <div class="icon-wrapper me-3">
+                    <i class="fab fa-github fa-2x text-primary"></i>
+                  </div>
+                  <div class="flex-grow-1">
+                    <h3 class="h5 mb-2">Login form</h3>
+                    <p class="text-muted mb-3">
+                      A simple login form with presitent database using MySQL.
+                    </p>
+                    <a
+                      href="https://github.com/TheBigDiamond/Login-final-project"
+                      class="btn btn-outline-primary"
+                      target="_blank"
+                    >
+                      <i class="fab fa-github me-1"></i> View on GitHub
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="card mb-4">
+              <div class="card-body p-4">
+                <div class="d-flex align-items-start">
+                  <div class="icon-wrapper me-3">
+                    <i class="fab fa-github fa-2x text-primary"></i>
+                  </div>
+                  <div class="flex-grow-1">
+                    <h3 class="h5 mb-2">IncluDO</h3>
+                    <p class="text-muted mb-3">
+                      An application to manipulate data in an SQL database.
+                    </p>
+                    <a
+                      href="https://github.com/TheBigDiamond/IncluDO"
+                      class="btn btn-outline-primary"
+                      target="_blank"
+                    >
+                      <i class="fab fa-github me-1"></i> View on GitHub
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer py-4 bg-light">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6 text-center text-lg-start mb-3 mb-lg-0">
+            <p class="mb-0">&copy; 2025 Luca Nuzzo.</p>
+          </div>
+          <div class="col-lg-6 text-center text-lg-end">
+            <a href="#top" class="text-decoration-none text-dark">
+              <i class="fas fa-arrow-up me-1"></i> Back to Top
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#" class="back-to-top" id="backToTop">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-</body>
+    <!-- Custom JS -->
+    <script>
+      const backToTop = document.getElementById("backToTop");
+      if (backToTop) {
+        window.addEventListener("scroll", function () {
+          if (window.pageYOffset > 300) {
+            backToTop.classList.add("show");
+          } else {
+            backToTop.classList.remove("show");
+          }
+        });
 
+        backToTop.addEventListener("click", function (e) {
+          e.preventDefault();
+          window.scrollTo({ top: 0, behavior: "smooth" });
+        });
+      }
+    </script>
+  </body>
 </html>
